fixed alignment issue of save button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,7 +158,7 @@ footer {
 }
 
 #save_btn {
-  margin-top: -75px;
+  margin-top: -13px;
 }
 
 ul.view_task_pagination {
